fix: fix width of the error page and paddings of the text content to remove horizontal scroll

--- a/src/pages/error404/styles.scss
+++ b/src/pages/error404/styles.scss
@@ -1,7 +1,7 @@
 @import "../../../variables.scss";
 
 .page-error {
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,7 +19,7 @@
       font-size: 200px;
       font-family: $primary-font;
       color: $primary-color;
-      padding: 50px;
+      padding: 50px 0;
       margin: 0;
     }
 
@@ -29,7 +29,7 @@
       font-size: 36px;
       font-family: $primary-font;
       color: $primary-color;
-      padding: 0 30px 100px 30px;
+      padding: 0 0 100px 0;
 
       .space {
         display: none;
